fix endpoints again